log
Wed 24 Apr 2024 06:33:13 PM UTC: 
 tests:  0|6
total_score: 0/70
d91ff3b
Wed 24 Apr 2024 06:38:23 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|6
total_score: 0/70
ecf8477
Wed 24 Apr 2024 06:39:56 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d020f54
Wed 24 Apr 2024 06:41:04 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|5
total_score: 10/70
922278b
Wed 24 Apr 2024 06:44:04 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:3: error: unknown type name ‘logn’; did you mean ‘long’?
   55 |   logn position = hash(key, map->capacity);
      |   ^~~~
      |   long
Compilation failed
da495d5
Wed 24 Apr 2024 06:44:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0a8e907
Wed 24 Apr 2024 06:44:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aae393f
Wed 24 Apr 2024 06:46:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
1fbe85d
Wed 24 Apr 2024 06:47:36 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
7730e80
Wed 24 Apr 2024 06:49:53 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|4
total_score: 30/70
630da0e
Wed 24 Apr 2024 06:55:13 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|3
total_score: 40/70
250f864
Wed 24 Apr 2024 06:56:00 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|3
total_score: 40/70
4fd7413
Wed 24 Apr 2024 06:58:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
e9137a1
Wed 24 Apr 2024 06:59:37 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
6602e99
Wed 24 Apr 2024 07:01:55 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
b71ab7f
Wed 24 Apr 2024 07:07:36 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|2
total_score: 50/70
007b0ad
Sun 28 Apr 2024 02:23:50 AM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c:193:5: error: expected identifier or ‘(’ before ‘return’
  193 |     return NULL;
      |     ^~~~~~
hashmap.c:194:1: error: expected identifier or ‘(’ before ‘}’ token
  194 | }
      | ^
Compilation failed
c9d3bf0
Sun 28 Apr 2024 02:24:16 AM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c: In function ‘firstMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be8b3cd
Sun 28 Apr 2024 02:28:15 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
test.c: In function ‘firstMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a7c517b
Sun 28 Apr 2024 02:32:25 AM UTC: 
 hashmap.c | 23 +----------------------
 1 file changed, 1 insertion(+), 22 deletions(-)
 tests:  11|2
total_score: 50/70
bc21e5f
Sun 28 Apr 2024 02:34:23 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  13|2
total_score: 50/70
af89bd1
Sun 28 Apr 2024 02:34:38 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
949cdc6
